gestion erreur si 2clics sur record : attention merge direct av master

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,9 @@
     <string name="light_purple">Violet clair</string>
     <string name="green">Vert</string>
     <string name="connection">Vous devez vous connecter</string>
+    <string name="alert">Alerte</string>
+    <string name="error_record">Une erreur est survenue, veuillez relancer une session</string>
+    <string name="ok">OK</string>
 
 
 </resources>
