VyfeViewModel, passing all seesions threw intent by their id and use repositories a better way

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,6 +123,8 @@
     <string name="color_gradient_grey">Gris</string>
     <string name="grid_name_empty_warning">Vous devez renseigner un titre à votre grille et des tags</string>
     <string name="save_grid_info">Grid saved</string>
+    <string name="permission_request">Vyfe app need permissions to record a video. Please check your config</string>
+    <string name="camera_error">This device is not supported for video record</string>
 
 
 </resources>
