--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,8 +68,7 @@
     <string name="mail_unkown">Email inconnu</string>
     <string name="send">Envoyer</string>
     <string name="date">Date</string>
-    <string name="contact">Vous pouvez nous contacter sur : www.vyfe.fr</string>
-    <string name="contact">Vous pouvez nous contacter sur : <u>www.vyfe-app.com</u></string>
+    <string name="contact">Vous pouvez nous contacter sur : <u>www.vyfe.fr</u></string>
     <string name="create_account">Créer un compte</string>
     <string name="havent_grid">Vous n\'avez pas encore de grille</string>
     <string name="havent_tag">Vous n\'avez pas de tagTemplates</string>
