reglage bug amelioration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,4 +142,5 @@
     <string name="space" />
     <string name="delete_session">Vidéo supprimée</string>
     <string name="save_session_record">Video enregistré:</string>
+    <string name="info_movie">Informations sur votre vidéo</string>
 </resources>
