rajout  position dans templates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,4 +143,5 @@
     <string name="delete_session">Vidéo supprimée</string>
     <string name="save_session_record">Video enregistré:</string>
     <string name="info_movie">Informations sur votre vidéo</string>
+    <string name="ask_connection">Vous devez vous connecter</string>
 </resources>
