--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="delete">Supprimer la vidéo</string>
     <string name="wait_few_minutes">Cela peut prendre plusieurs minutes...</string>
     <string name="save_in_progress">Sauvegarde en cours...</string>
-    <string name="bad_authentifiaction">Mauvaise identifiaction</string>
+    <string name="bad_authentifiaction">L\'authentification a échoué. Vérifiez votre email et mot de passe</string>
     <string name="havent_video">Vous n\'avez pas encore de vidéo</string>
     <string name="logout">Déconnection</string>
     <string name="enter_email">Entrez une adresse mail</string>
