--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,4 +149,5 @@
     <string name="confirm_change_movie">Voulez-vous vraiment modifier cette vidéo ?</string>
     <string name="date_session">Date :</string>
     <string name="duration_session">Durée :</string>
+    <string name="info_max_tags">Attention si vous utilisez plus de 10 tags, le feedback ne va pas être optimal.Nous vous conseillons d\'utiliser au maximum 10 tags</string>
 </resources>
