text live recording

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,8 +150,8 @@
     <string name="date_session">Date :</string>
     <string name="duration_session">Durée :</string>
     <string name="info_max_tags">Attention si vous utilisez plus de 10 tags, le feedback ne va pas être optimal.Nous vous conseillons d\'utiliser au maximum 10 tags</string>
-    <string name="off_on">Off/On</string>
-    <string name="start_live">Lancement d\'une session Live</string>
+    <string name="off_on">Off/On : </string>
+    <string name="start_live">Lancement d\'une session coopérative</string>
     <string name="Grid">Grille</string>
     <string name="live">Live</string>
 </resources>
