--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,4 +154,5 @@
     <string name="start_live">Lancement d\'une session coopérative</string>
     <string name="Grid">Grille</string>
     <string name="live">Live</string>
+    <string name="participants">Participants :</string>
 </resources>
