--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,5 +160,6 @@
     <string name="observer">Observateur : </string>
     <string name="unknow">Inconnu</string>
     <string name="delete_all">Supprimer la session</string>
+    <string name="name_unknow">Non connu</string>
 
 </resources>
