--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,5 +161,6 @@
     <string name="unknow">Inconnu</string>
     <string name="delete_all">Supprimer la session</string>
     <string name="name_unknow">Non connu</string>
+    <string name="info_delete">Vous n\'avez pas téléchargé votre vidéo sur la plateforme, si vous la supprimer, elle ne sera plus disponible</string>
 
 </resources>
