--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="end">Terminer</string>
     <string name="tag_name">Nom du tag</string>
     <string name="tag_color">Couleur du tag</string>
-    <string name="def_color">Définissez un nom et une couleur au tag</string>
+    <string name="def_color" translatable="false">Définissez un nom et une couleur au tag</string>
     <string name="grid_import">Choississez votre grille d\'observation :</string>
     <string name="new_grid2">Créer une nouvelle grille d\'observation</string>
     <string name="move">Tag déplacé</string>
