view session collaborative

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,5 +162,6 @@
     <string name="delete_all">Supprimer la session</string>
     <string name="name_unknow">Non connu</string>
     <string name="info_delete">Vous n\'avez pas téléchargé votre vidéo sur la plateforme, si vous la supprimer, elle ne sera plus disponible</string>
+    <string name="havent_roles_teacher">Les droits liés à votre profil sont insuffisants, veuillez contacter votre administrateur</string>
 
 </resources>
