info Connexion session collab and sign out fix beug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,5 +164,6 @@
     <string name="info_delete">Vous n\'avez pas téléchargé votre vidéo sur la plateforme, si vous la supprimer, elle ne sera plus disponible</string>
     <string name="havent_roles_teacher">Les droits liés à votre profil sont insuffisants, veuillez contacter votre administrateur</string>
     <string name="try_again">Réessayer</string>
+    <string name="connecting_internet">Vous devez posseder une connexion à Internet pour activer la session collaborative</string>
 
 </resources>
