create tag in one page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,5 +182,7 @@
     <string name="quiet">Quitter</string>
     <string name="dont_save">Vous n\'avez pas enregistré vos modifications</string>
     <string name="confirm_delete_tag_sets">Etês vous sur de vouloir supprimées les grilles selectionnées ?</string>
+    <string name="ex_posture">Ex : Posture</string>
+    <string name="ex_title_session">Ex : Discours Jean</string>
 
 </resources>
