view count tag list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,7 +175,7 @@
     <string name="select_nothing">Deselectionner</string>
     <string name="add_tag_set">Ajouter une grille</string>
     <string name="tag_set_selected">Grille sélectionnée :</string>
-    <string name="tag_set">grille d\'observation</string>
+    <string name="tag_set">Grille d\'observation</string>
     <string name="vyfe_site">https://vyfe.fr/</string>
     <string name="ask_email">Veuillez renseigner un email afin de reinitialiser votre mot de passe</string>
     <string name="save">Sauver</string>
